# molgan

./: Dockerfile  README.md  pyproject.toml
molgan/: main.py  models.py  settings.py  utils.py  views.py
molgan/files/: prediction_list.json
molgan/static/molgan/css/: base.css  index.css
molgan/static/molgan/js/: mpnn_list.js
molgan/templates/molgan/: 404.html  base.html  index.html  jtvae.html  models.html  mpnn.html  mpnn_list.html  mpnn_list_predict.html  mpnn_prediction.html
molgan/tmp/: tmpv2pol151
