[tool.poetry]
name = "molgan"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
aiohttp = "^3.8.6"
python-multipart = "^0.0.6"


[tool.poetry.group.tests.dependencies]
pytest = "^7.4.2"
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
